css/showcase.scss
---
---

/* Showcases */
.showcase {
	background-color: black;
	background-size: cover;
	
	border-bottom: solid var(--thin-border-size) var(--thin-border-color);
	
	.showcase-content {
		padding: 1rem;
		
		min-width: 16rem;
		min-height: 32rem;
		
		width: 40vw;
		
		max-width: 32rem;
		
		background-color: #3f3f3fcf;
	}
	
	&:nth-child(odd) {
		background-position: left center;
		
		.showcase-content {
			float: left;
			
			border-right: solid var(--thin-border-size) var(--thin-border-color);
			
			div.button-set {
				text-align: right;
			}
		}
	}
	
	&:nth-child(even) {
		background-position: right center;
		
		.showcase-content {
			float: right;
			
			border-left: solid var(--thin-border-size) var(--thin-border-color);
			
			div.button-set {
				text-align: left;
			}
		}
	}
}

:not(.showcase) + .showcase {
	border-top: solid var(--thin-border-size) var(--thin-border-color);
}

